--- a/packages/spindle-ui/src/Button/Button.stories.mdx
+++ b/packages/spindle-ui/src/Button/Button.stories.mdx
@@ -7,7 +7,7 @@ import { PlusBold, ArrowRightBold, OpenblankFill } from '../Icon';
 
 <Meta title="Button" component={Button} />
 
-## Installation
+![stability-stable](https://img.shields.io/badge/stability-stable-green.svg)
 
 <Source
   language='javascript'
