chore(spindle-ui): fix heading level
Co-authored-by: Hiroki Tani <contact@inkdesign.jp>

--- a/packages/spindle-ui/src/Icon/index.stories.mdx
+++ b/packages/spindle-ui/src/Icon/index.stories.mdx
@@ -12,7 +12,7 @@ import { Clock } from './index';
   code={`import Icon from '@openameba/spindle-ui'`}
 />
 
-# Clock Icon
+## Clock Icon
 
 <Source
   language='javascript'
