--- a/packages/spindle-ui/src/Button/Button.stories.mdx
+++ b/packages/spindle-ui/src/Button/Button.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta, Story, Source } from '@storybook/addon-docs/blocks';
+import { Description, Meta, Story, Source } from '@storybook/addon-docs/blocks';
 import { actions } from '@storybook/addon-actions';
 import { Button } from './Button';
 import { PlusBold, ArrowRightBold, OpenblankFill } from '../Icon';
@@ -317,3 +317,6 @@ import { PlusBold, ArrowRightBold, OpenblankFill } from '../Icon';
 <button class="spui-Button spui-Button--fullWidth spui-Button--small spui-Button--neutral"><span class="spui-Button-icon spui-Button-icon--small"><svg /></span>Neutral</button>
   `}
 />
+
+## Browser Compatibility
+<Description>active時やhover時など各stateのスタイルは、ブラウザごとに異なります。詳しくは[ButtonのStateパターン変更](https://github.com/openameba/spindle/issues/13)を参照してください。</Description>
