docs(spindle-ui): update stability status for Form components

--- a/packages/spindle-ui/src/Form/InvalidMessage.stories.mdx
+++ b/packages/spindle-ui/src/Form/InvalidMessage.stories.mdx
@@ -5,7 +5,7 @@ import { InvalidMessage } from './InvalidMessage';
 
 <Meta title="Form/InvalidMessage" component={InvalidMessage} />
 
-![stability-wip](https://img.shields.io/badge/stability-work_in_progress-lightgrey.svg)
+![stability-stable](https://img.shields.io/badge/stability-stable-green.svg)
 
 <Source
   language='javascript'
