--- a/packages/spindle-ui/src/Form/Radio.stories.mdx
+++ b/packages/spindle-ui/src/Form/Radio.stories.mdx
@@ -6,7 +6,7 @@ import { Radio } from './Radio';
 
 <Meta title="Form/Radio" component={Radio} />
 
-![stability-wip](https://img.shields.io/badge/stability-work_in_progress-lightgrey.svg)
+![stability-stable](https://img.shields.io/badge/stability-stable-green.svg)
 
 <Source
   language='javascript'
