--- a/packages/spindle-ui/src/Form/TextArea.stories.mdx
+++ b/packages/spindle-ui/src/Form/TextArea.stories.mdx
@@ -6,7 +6,7 @@ import { TextArea } from './TextArea';
 
 <Meta title="Form/TextArea" component={TextArea} />
 
-![stability-wip](https://img.shields.io/badge/stability-work_in_progress-lightgrey.svg)
+![stability-stable](https://img.shields.io/badge/stability-stable-green.svg)
 
 <Source
   language='javascript'
