--- a/packages/spindle-ui/src/Form/DropDown.stories.mdx
+++ b/packages/spindle-ui/src/Form/DropDown.stories.mdx
@@ -6,7 +6,7 @@ import { DropDown } from './DropDown';
 
 <Meta title="Form/DropDown" component={DropDown} />
 
-![stability-wip](https://img.shields.io/badge/stability-work_in_progress-lightgrey.svg)
+![stability-stable](https://img.shields.io/badge/stability-stable-green.svg)
 
 <Source
   language='javascript'
