--- a/packages/spindle-ui/src/Form/InputLabel.stories.mdx
+++ b/packages/spindle-ui/src/Form/InputLabel.stories.mdx
@@ -5,7 +5,7 @@ import { InputLabel } from './InputLabel';
 
 <Meta title="Form/InputLabel" component={InputLabel} />
 
-![stability-wip](https://img.shields.io/badge/stability-work_in_progress-lightgrey.svg)
+![stability-stable](https://img.shields.io/badge/stability-stable-green.svg)
 
 <Source
   language='javascript'
