--- a/packages/spindle-ui/src/Form/TextField.stories.mdx
+++ b/packages/spindle-ui/src/Form/TextField.stories.mdx
@@ -6,7 +6,7 @@ import { TextField } from './TextField';
 
 <Meta title="Form/TextField" component={TextField} />
 
-![stability-wip](https://img.shields.io/badge/stability-work_in_progress-lightgrey.svg)
+![stability-stable](https://img.shields.io/badge/stability-stable-green.svg)
 
 <Source
   language='javascript'
