--- a/packages/spindle-ui/src/Form/ToggleSwitch.stories.mdx
+++ b/packages/spindle-ui/src/Form/ToggleSwitch.stories.mdx
@@ -6,7 +6,7 @@ import { ToggleSwitch } from './ToggleSwitch';
 
 <Meta title="Form/ToggleSwitch" component={ToggleSwitch} />
 
-![stability-wip](https://img.shields.io/badge/stability-work_in_progress-lightgrey.svg)
+![stability-stable](https://img.shields.io/badge/stability-stable-green.svg)
 
 <Source
   language='javascript'
