--- a/packages/spindle-ui/src/LinkButton/LinkButton.stories.mdx
+++ b/packages/spindle-ui/src/LinkButton/LinkButton.stories.mdx
@@ -258,5 +258,33 @@ import { PlusBold, ArrowRightBold, OpenblankFill } from '../Icon';
   `}
 />
 
+## Lighted
+
+![stability-experiment](https://img.shields.io/badge/stability-experiment-red.svg)
+
+<Description>
+  Neutralからの状態変化先のスタイルとして定義しており、単独での利用は推奨していません。Lightedは試験的なVarientであるため、今後に破壊的な変更や削除がおこなわれる可能性があることに注意して利用してください。
+</Description>
+
+<Preview withSource="open">
+  <Story name="Lighted">
+    <LinkButton href="#" size="large" variant="lighted" {...actions('onMouseOver')}>Lighted</LinkButton>
+  </Story>
+</Preview>
+
+<Source
+  code={`
+<LinkButton href="#" size="large" variant="lighted">Lighted</LinkButton>
+  `}
+/>
+
+<Source
+  language='html'
+  code={`
+<a class="spui-LinkButton spui-LinkButton--large spui-LinkButton--lighted" href="#">Lighted</a>
+  `}
+/>
+
 ## Browser Compatibility
 <Description>active時やhover時など各stateのスタイルは、ブラウザごとに異なります。詳しくは[ButtonのStateパターン変更](https://github.com/openameba/spindle/issues/13)を参照してください。</Description>
+
