feat(spindle-ui): add lighetd, danger types to IconButton

--- a/packages/spindle-ui/src/IconButton/IconButton.stories.mdx
+++ b/packages/spindle-ui/src/IconButton/IconButton.stories.mdx
@@ -31,23 +31,26 @@ import { PlusBold } from '../Icon';
     <IconButton size="large" variant="contained" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="large" variant="outlined" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="large" variant="neutral" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
+    <IconButton size="large" variant="danger" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
   </Story>
 </Preview>
 
 <Source
   code={`
-<IconButton size="large" variant="contained">+</IconButton>
-<IconButton size="large" variant="outlined">+</IconButton>
-<IconButton size="large" variant="neutral">+</IconButton>
+<IconButton size="large" variant="contained"><PlusBold /></IconButton>
+<IconButton size="large" variant="outlined"><PlusBold /></IconButton>
+<IconButton size="large" variant="neutral"><PlusBold /></IconButton>
+<IconButton size="large" variant="danger"><PlusBold /></IconButton>
   `}
 />
 
 <Source
   language='html'
   code={`
-<button class="spui-IconButton spui-IconButton--large spui-IconButton--contained">+</button>
-<button class="spui-IconButton spui-IconButton--large spui-IconButton--outlined">+</button>
-<button class="spui-IconButton spui-IconButton--large spui-IconButton--neutral">+</button>
+<button class="spui-IconButton spui-IconButton--large spui-IconButton--contained"><svg /></button>
+<button class="spui-IconButton spui-IconButton--large spui-IconButton--outlined"><svg /></button>
+<button class="spui-IconButton spui-IconButton--large spui-IconButton--neutral"><svg /></button>
+<button class="spui-IconButton spui-IconButton--large spui-IconButton--danger"><svg /></button>
   `}
 />
 
@@ -58,23 +61,26 @@ import { PlusBold } from '../Icon';
     <IconButton size="medium" variant="contained" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="medium" variant="outlined" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="medium" variant="neutral" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
+    <IconButton size="medium" variant="danger" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
   </Story>
 </Preview>
 
 <Source
   code={`
-<IconButton size="medium" variant="contained">+</IconButton>
-<IconButton size="medium" variant="outlined">+</IconButton>
-<IconButton size="medium" variant="neutral">+</IconButton>
+<IconButton size="medium" variant="contained"><PlusBold /></IconButton>
+<IconButton size="medium" variant="outlined"><PlusBold /></IconButton>
+<IconButton size="medium" variant="neutral"><PlusBold /></IconButton>
+<IconButton size="medium" variant="danger"><PlusBold /></IconButton>
   `}
 />
 
 <Source
   language='html'
   code={`
-<button class="spui-IconButton spui-IconButton--medium spui-IconButton--contained">+</button>
-<button class="spui-IconButton spui-IconButton--medium spui-IconButton--outlined">+</button>
-<button class="spui-IconButton spui-IconButton--medium spui-IconButton--neutral">+</button>
+<button class="spui-IconButton spui-IconButton--medium spui-IconButton--contained"><svg /></button>
+<button class="spui-IconButton spui-IconButton--medium spui-IconButton--outlined"><svg /></button>
+<button class="spui-IconButton spui-IconButton--medium spui-IconButton--neutral"><svg /></button>
+<button class="spui-IconButton spui-IconButton--medium spui-IconButton--danger"><svg /></button>
   `}
 />
 
@@ -85,23 +91,26 @@ import { PlusBold } from '../Icon';
     <IconButton size="small" variant="contained" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="small" variant="outlined" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="small" variant="neutral" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
+    <IconButton size="small" variant="danger" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
   </Story>
 </Preview>
 
 <Source
   code={`
-<IconButton size="small" variant="contained">+</IconButton>
-<IconButton size="small" variant="outlined">+</IconButton>
-<IconButton size="small" variant="neutral">+</IconButton>
+<IconButton size="small" variant="contained"><PlusBold /></IconButton>
+<IconButton size="small" variant="outlined"><PlusBold /></IconButton>
+<IconButton size="small" variant="neutral"><PlusBold /></IconButton>
+<IconButton size="small" variant="danger"><PlusBold /></IconButton>
   `}
 />
 
 <Source
   language='html'
   code={`
-<button class="spui-IconButton spui-IconButton--small spui-IconButton--contained">+</button>
-<button class="spui-IconButton spui-IconButton--small spui-IconButton--outlined">+</button>
-<button class="spui-IconButton spui-IconButton--small spui-IconButton--neutral">+</button>
+<button class="spui-IconButton spui-IconButton--small spui-IconButton--contained"><svg /></button>
+<button class="spui-IconButton spui-IconButton--small spui-IconButton--outlined"><svg /></button>
+<button class="spui-IconButton spui-IconButton--small spui-IconButton--neutral"><svg /></button>
+<button class="spui-IconButton spui-IconButton--small spui-IconButton--danger"><svg /></button>
   `}
 />
 
@@ -112,23 +121,26 @@ import { PlusBold } from '../Icon';
     <IconButton size="exSmall" variant="contained" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="exSmall" variant="outlined" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton size="exSmall" variant="neutral" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
+    <IconButton size="exSmall" variant="danger" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
   </Story>
 </Preview>
 
 <Source
   code={`
-<IconButton size="exSmall" variant="contained">+</IconButton>
-<IconButton size="exSmall" variant="outlined">+</IconButton>
-<IconButton size="exSmall" variant="neutral">+</IconButton>
+<IconButton size="exSmall" variant="contained"><PlusBold /></IconButton>
+<IconButton size="exSmall" variant="outlined"><PlusBold /></IconButton>
+<IconButton size="exSmall" variant="neutral"><PlusBold /></IconButton>
+<IconButton size="exSmall" variant="danger"><PlusBold /></IconButton>
   `}
 />
 
 <Source
   language='html'
   code={`
-<button class="spui-IconButton spui-IconButton--exSmall spui-IconButton--contained">+</button>
-<button class="spui-IconButton spui-IconButton--exSmall spui-IconButton--outlined">+</button>
-<button class="spui-IconButton spui-IconButton--exSmall spui-IconButton--neutral">+</button>
+<button class="spui-IconButton spui-IconButton--exSmall spui-IconButton--contained"><svg /></button>
+<button class="spui-IconButton spui-IconButton--exSmall spui-IconButton--outlined"><svg /></button>
+<button class="spui-IconButton spui-IconButton--exSmall spui-IconButton--neutral"><svg /></button>
+<button class="spui-IconButton spui-IconButton--exSmall spui-IconButton--danger"><svg /></button>
   `}
 />
 
@@ -139,23 +151,26 @@ import { PlusBold } from '../Icon';
     <IconButton disabled size="medium" variant="contained" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton disabled size="medium" variant="outlined" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
     <IconButton disabled size="medium" variant="neutral" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
+    <IconButton disabled size="medium" variant="danger" {...actions('onClick', 'onMouseOver')}><PlusBold /></IconButton>
   </Story>
 </Preview>
 
 <Source
   code={`
-<IconButton disabled size="medium" variant="contained">+</IconButton>
-<IconButton disabled size="medium" variant="outlined">+</IconButton>
-<IconButton disabled size="medium" variant="neutral">+</IconButton>
+<IconButton disabled size="medium" variant="contained"><PlusBold /></IconButton>
+<IconButton disabled size="medium" variant="outlined"><PlusBold /></IconButton>
+<IconButton disabled size="medium" variant="neutral"><PlusBold /></IconButton>
+<IconButton disabled size="medium" variant="danger"><PlusBold /></IconButton>
   `}
 />
 
 <Source
   language='html'
   code={`
-<button class="spui-IconButton spui-IconButton--medium spui-IconButton--contained" disabled>+</button>
-<button class="spui-IconButton spui-IconButton--medium spui-IconButton--outlined" disabled>+</button>
-<button class="spui-IconButton spui-IconButton--medium spui-IconButton--neutral" disabled>+</button>
+<button class="spui-IconButton spui-IconButton--medium spui-IconButton--contained" disabled><svg /></button>
+<button class="spui-IconButton spui-IconButton--medium spui-IconButton--outlined" disabled><svg /></button>
+<button class="spui-IconButton spui-IconButton--medium spui-IconButton--neutral" disabled><svg /></button>
+<button class="spui-IconButton spui-IconButton--medium spui-IconButton--danger" disabled><svg /></button>
   `}
 />
 
