refactor(spindle-ui): remove unnecessary role attribute
Co-authored-by: Takuyu Arata <3806115+ta9yu@users.noreply.github.com>

--- a/packages/spindle-ui/src/Breadcrumb/Breadcrumb.stories.mdx
+++ b/packages/spindle-ui/src/Breadcrumb/Breadcrumb.stories.mdx
@@ -51,7 +51,7 @@ import { BreadcrumbItem } from './BreadcrumbItem';
 <Source
   language='html'
   code={`
-<nav class="spui-Breadcrumb" aria-label="パンくずリスト" role="navigation">
+<nav class="spui-Breadcrumb" aria-label="パンくずリスト">
   <ol class="spui-Breadcrumb-list">
     <li class="spui-Breadcrumb-item"><a href="/top">Top</a><svg class="spui-Breadcrumb-chevron" role="img" aria-hidden="true"></svg></li>
     <li class="spui-Breadcrumb-item"><a href="/team">Team</a><svg class="spui-Breadcrumb-chevron" role="img" aria-hidden="true"></svg></li>
