docs: add description

--- a/packages/spindle-hooks/src/useCarousel/useCarousel.stories.mdx
+++ b/packages/spindle-hooks/src/useCarousel/useCarousel.stories.mdx
@@ -179,7 +179,11 @@ export const HeroCarousel = () => {
 
 ![stability-experiment](https://img.shields.io/badge/stability-experiment-red.svg)
 
-<Description>useCarouselのDescriptionを記述します。</Description>
+<Description>Carouselの機能をまとめたHooksです。</Description>
+
+<Description>
+  マークアップ部分のアクセシビリティ周りは担保できないので下の例を参考に実装してください。
+</Description>
 
 <Source
   language="javascript"
