--- a/packages/spindle-ui/src/TextLink/TextLink.stories.mdx
+++ b/packages/spindle-ui/src/TextLink/TextLink.stories.mdx
@@ -143,7 +143,7 @@ import { ChevronRightBold, CameraFill } from '../Icon';
 
 <Source
   code={`
-<TextLink href="#" variant="subtle" disableUnderline disableUnderline>Text Link</TextLink>
+<TextLink href="#" variant="subtle" disableUnderline>Text Link</TextLink>
   `}
 />
 
