chore(spindle-ui): rename story example file

--- a/packages/spindle-ui/src/Modal/AppealModal.stories.mdx
+++ b/packages/spindle-ui/src/Modal/AppealModal.stories.mdx
@@ -1,6 +1,6 @@
 import { useEffect, useRef } from 'react';
 import { Description, Meta, Story, Source } from '@storybook/addon-docs/blocks';
-import { AppealModalExample, StyleOnly, StyleOnlyMedium, StyleOnlySmall, StyleOnlyCustomized } from './AppealModalExample';
+import { AppealModalExample, StyleOnly, StyleOnlyMedium, StyleOnlySmall, StyleOnlyCustomized } from './AppealModal.stories.example';
 
 # AppealModal
 
