build(spindle-ui): change filename to avoid TS build

--- a/packages/spindle-ui/src/Dialog/Dialog.stories.mdx
+++ b/packages/spindle-ui/src/Dialog/Dialog.stories.mdx
@@ -1,6 +1,6 @@
 import { useEffect, useRef } from 'react';
 import { Description, Meta, Story, Source } from '@storybook/addon-docs/blocks';
-import { DialogExample, StyleOnly, ButtonRow, ButtonColumn, ButtonColumnWithSubtleButton } from './DialogExample';
+import { DialogExample, StyleOnly, ButtonRow, ButtonColumn, ButtonColumnWithSubtleButton } from './Dialog.stories.example';
 
 # Dialog
 
